--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,11 @@ name = "mavros"
 version = "0.1.0"
 edition = "2024"
 
+[features]
+default = ["wasm", "plotting"]
+wasm = ["dep:inkwell", "dep:wasmtime"]
+plotting = ["dep:plotters"]
+
 [dependencies]
 fm = { git = "https://github.com/noir-lang/noir.git", branch = "master", package = "fm" }
 nargo = { git = "https://github.com/noir-lang/noir.git", branch = "master", package = "nargo" }
@@ -33,10 +38,11 @@ ark-ff = { version = "0.5.0" }
 ark-serialize = { version = "0.5.0", features = ["derive"] }
 bincode = "1.3"
 
-# LLVM codegen
-inkwell = { version = "0.5", features = ["llvm18-0"] }
-graphviz-rust = "0.6.0"
-plotters = "0.3.5"
+# Optional heavy dependencies
+inkwell = { version = "0.5", features = ["llvm18-0"], optional = true }
+plotters = { version = "0.3.5", optional = true }
+wasmtime = { version = "31", optional = true }
+
 tracing = "0.1.41"
 tracing-forest = "0.1.6"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
@@ -45,7 +51,6 @@ rand = "0.8"
 opcode-gen = { path = "opcode-gen" }
 ssa-builder = { path = "ssa-builder" }
 cargo_metadata = "0.23.1"
-wasmtime = "31"
 
 [dev-dependencies]
 anyhow = "1.0.87"
