--- a/noir_examples/poseidon2_simple/Nargo.toml
+++ b/noir_examples/poseidon2_simple/Nargo.toml
@@ -4,3 +4,4 @@ type = "bin"
 authors = [""]
 
 [dependencies]
+poseidon2 = { tag="v0.5.0-beta.0" , git = "https://github.com/TaceoLabs/noir-poseidon", directory = "poseidon2" }
