--- a/.github/workflows/test-runner.yml
+++ b/.github/workflows/test-runner.yml
@@ -32,6 +32,9 @@ jobs:
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
           restore-keys: ${{ runner.os }}-cargo-
 
+      - name: Check code formatting
+        run: nix develop --command cargo fmt --all --check
+
       - name: Build test-runner
         run: nix develop --command cargo build --release --bin test-runner
 
