--- a/.github/workflows/test-runner.yml
+++ b/.github/workflows/test-runner.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Check code formatting
-        run: nix develop --command cargo fmt --all --check
+        run: cargo fmt --all --check
 
   test:
     runs-on: ubuntu-latest
